fix: collapse node wrap fix (#1271)

--- a/compiled/alipay/src/Collapse/index.less
+++ b/compiled/alipay/src/Collapse/index.less
@@ -37,10 +37,6 @@
       display: flex;
       flex: 1;
       max-width: 100%;
-      // height: @collapse-title-height;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
       font-size: 34 * @rpx;
       color: @COLOR_TEXT_PRIMARY;
     }
